--- a/finance_invoicing.html
+++ b/finance_invoicing.html
@@ -31,7 +31,7 @@
             <div class="container-fluid position-relative py-2">
                 <div class="docs-logo-wrapper">
 	                <div class="site-logo"><a class="navbar-brand" href="index.html">
-				<img class="logo-icon mr-2" src="assets/images/features/ourlogo.png" alt="logo"><span class="logo-text"><span class="text-alt">Docs</span></span></a></div>    
+				<img class="logo-icon mr-2 animate__zoomInDown" src="assets/images/features/ourlogo.png" alt="logo"><span class="logo-text "><span class="text-alt">Docs</span></span></a></div>    
                 </div><!--//docs-logo-wrapper-->
 	            <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 	
@@ -70,7 +70,7 @@
 			    <div class="row justify-content-center">
 
 					<div class="jumbotron justify-content-center  shadow-sm mb-2">
-						<h1 class="display-5 mb-3 pb-4 text-center animate__animated animate__backInDown">Online Invoicing</h1>
+						<h1 class="display-5 mb-3 pb-4 text-center animate__animated animate__zoomInDown">Online Invoicing</h1>
 						<p class="lead text-center">
 							Online Invoicing is a new feature in Campuscura.
 						</p>
