--- a/departmentalclaim.html
+++ b/departmentalclaim.html
@@ -88,6 +88,7 @@
 				<article class="docs-article" id="section-1">
 					<header class="docs-header">
 						<h1 class="docs-heading shadow p-3 mb-5 bg-white rounded">Introduction <span class="p-3 docs-time">Last updated: 2022-05-01</span></h1> </header>
+					<P>To claim CEP/PU Confirm Lecturer's Allocation name ,Hours , Subject/Unit Code, Subject/Unit Title are correct on Campuscura.</P>
 					<section class="docs-section" id="item-1-1">
 						<h2 class="shadow p-3 mb-5 bg-white rounded section-heading">Login</h2> <img src="assets/images/departmetalclaims/login.jpg" class="rounded img-fluid shadow" />
 						<div class="callout-block callout-block-info shadow">
