--- a/departmentalclaim.html
+++ b/departmentalclaim.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<title>SystemoneDocs -Systemone Documentation</title>
 	<!-- Meta -->
@@ -87,8 +86,9 @@
 			<div class="container">
 				<article class="docs-article" id="section-1">
 					<header class="docs-header">
-						<h1 class="docs-heading shadow p-3 mb-5 bg-white rounded">Introduction <span class="p-3 docs-time">Last updated: 2022-05-01</span></h1> </header>
-					<P>To claim CEP/PU Confirm Lecturer's Allocation name ,Hours , Subject/Unit Code, Subject/Unit Title are correct on Campuscura.</P>
+						<h1 class="docs-heading shadow p-3 mb-5 bg-white rounded">Introduction <span class="p-3 docs-time">Last updated: 2022-05-01</span></h1> 
+						<P>To claim CEP/PU Confirm Lecturer's Allocation name ,Hours , Subject/Unit Code, Subject/Unit Title are correct on Campuscura.</P>
+					</header>
 					<section class="docs-section" id="item-1-1">
 						<h2 class="shadow p-3 mb-5 bg-white rounded section-heading">Login</h2> <img src="assets/images/departmetalclaims/login.jpg" class="rounded img-fluid shadow" />
 						<div class="callout-block callout-block-info shadow">
