--- a/lecturers_index.html
+++ b/lecturers_index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Campuscura exams Processing">
+    <meta name="description" content="Campuscura How to Capture Marks,Tp marks ">
     <meta name="author" content="SystemoneLtd Support Team">    
     <link rel="shortcut icon" href="favicon.ico"> 
     
