--- a/finance/finance_index.html
+++ b/finance/finance_index.html
@@ -77,7 +77,7 @@
 							    <div class="card-text">
 								 Setting Fee Structure
 							    </div>
-							    <a class="card-link-mask" href="finance_setting.html"></a>
+							    <a class="card-link-mask" href="finance/finance_setting.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -94,7 +94,7 @@
 							    <div class="card-text">
 								   Online Students Receipting
 							    </div>
-							    <a class="card-link-mask" href="finance_invoicing.html"></a>
+							    <a class="card-link-mask" href="finance/finance_invoicing.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -111,7 +111,7 @@
 							    <div class="card-text">
 								 Only Pending Invoices Can be Cancelled.
 							    </div>
-							    <a class="card-link-mask" href="finance_invoicing.html"></a>
+							    <a class="card-link-mask" href="finance/finance_invoicing.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -130,7 +130,7 @@
 							    <div class="card-text">
 								 Posted Invoices Can not be Cancelled hence Raise a Credit Note
 							    </div>
-							    <a class="card-link-mask" href="finance_invoicing.html"></a>
+							    <a class="card-link-mask" href="finance/finance_invoicing.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -149,7 +149,7 @@
 							    <div class="card-text">
 								   Online Students Receipting
 							    </div>
-							    <a class="card-link-mask" href="finance_receipting.html"></a>
+							    <a class="card-link-mask" href="finance/finance_receipting.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
