--- a/finance/finance_setting.html
+++ b/finance/finance_setting.html
@@ -48,7 +48,7 @@
 	    <div class="theme-bg-shapes-right"></div>
 	    <div class="theme-bg-shapes-left"></div>
 	    <div class="container">
-	    <h1 class="page-heading single-col-max mx-auto">Finance Imprest Documentation</h1>
+	    <h1 class="page-heading single-col-max mx-auto">Setting Fee Structure</h1>
 	   <div class="page-intro single-col-max mx-auto"></div>
 	   <div class="main-search-box pt-3 d-block mx-auto">
            <form class="search-form w-100">
@@ -106,12 +106,7 @@
 				    </div>
 				       <div class="card shadow-sm mb-2">
 					    <div class="card-body">
-						    <div>
-							    <a href="marksgrading.html"><h5 class="shadow-sm p-3 mb-2  bg-white section-heading">
-								    NEXT MARKS GRADING
-							    </h5>
-							    </a>
-						    </div>
+						    
 					    </div>
 				    </div>    
 				   
