--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								 An Institution's activities depend on the competence of an Institution's 
 								 finance department and the individuals who comprise it. A finance department 
 								 is organized by, and runs according to, specific roles and duties.  </div>
-							    <a class="card-link-mask" href="finance/finance_index.html"></a>
+							    <a class="card-link-mask" href="./finance/finance_index.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
