--- a/finance_index.html
+++ b/finance_index.html
@@ -18,7 +18,7 @@
     <script defer src="assets/fontawesome/js/all.min.js"></script>
 
     <!-- Theme CSS -->  
-    <link id="theme-style" rel="stylesheet" href="../assets/css/theme.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
 
 </head> 
 
@@ -27,7 +27,7 @@
         <div class="branding docs-branding">
             <div class="container-fluid position-relative py-2">
                 <div class="docs-logo-wrapper">
-	                <div class="site-logo"><a class="navbar-brand" href="../index.html"><img class="logo-icon mr-2" src="assets/images/features/ourlogo.png" alt="logo"><span class="logo-text"><span class="text-alt">Docs</span></span></a></div>    
+	                <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon mr-2" src="assets/images/features/ourlogo.png" alt="logo"><span class="logo-text"><span class="text-alt">Docs</span></span></a></div>    
                 </div><!--//docs-logo-wrapper-->
 	            <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 	
@@ -77,7 +77,7 @@
 							    <div class="card-text">
 								 Setting Fee Structure
 							    </div>
-							    <a class="card-link-mask" href="finance/finance_setting.html"></a>
+							    <a class="card-link-mask" href="finance_setting.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -94,7 +94,7 @@
 							    <div class="card-text">
 								   Online Students Receipting
 							    </div>
-							    <a class="card-link-mask" href="finance/finance_invoicing.html"></a>
+							    <a class="card-link-mask" href="finance_invoicing.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -111,7 +111,7 @@
 							    <div class="card-text">
 								 Only Pending Invoices Can be Cancelled.
 							    </div>
-							    <a class="card-link-mask" href="finance/finance_invoicing.html"></a>
+							    <a class="card-link-mask" href="finance_invoicing.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -130,7 +130,7 @@
 							    <div class="card-text">
 								 Posted Invoices Can not be Cancelled hence Raise a Credit Note
 							    </div>
-							    <a class="card-link-mask" href="finance/finance_invoicing.html"></a>
+							    <a class="card-link-mask" href="finance_invoicing.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
@@ -149,7 +149,7 @@
 							    <div class="card-text">
 								   Online Students Receipting
 							    </div>
-							    <a class="card-link-mask" href="finance/finance_receipting.html"></a>
+							    <a class="card-link-mask" href="finance_receipting.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
