--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- FontAwesome JS-->
     <script defer src="assets/fontawesome/js/all.min.js"></script>
     <!-- Theme CSS -->  
-    <link id="theme-style" rel="stylesheet" href="../assets/css/theme.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
 
 </head> 
 
@@ -76,7 +76,7 @@
 								 An Institution's activities depend on the competence of an Institution's 
 								 finance department and the individuals who comprise it. A finance department 
 								 is organized by, and runs according to, specific roles and duties.  </div>
-							    <a class="card-link-mask" href="./finance/finance_index.html"></a>
+							    <a class="card-link-mask" href="finance_index.html"></a>
 						    </div><!--//card-body-->
 					    </div><!--//card-->
 				    </div><!--//col-->
