--- a/departmentalclaim.html
+++ b/departmentalclaim.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="systemone ltd Software Startups">
+	<meta name="description" content="systemone ltd Software | Departmental Claims,CEP CLAIMS, PU CLAIMS ">
 	<meta name="author" content="frankip">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Google Font -->
