--- a/exams_reports.html
+++ b/exams_reports.html
@@ -76,7 +76,7 @@
       <div class="theme-bg-shapes-left"></div>
       <div class="container">
         <h1 class="page-heading single-col-max mx-auto">
-          Campuscura Examination Report Guide
+          Campuscura Examination Guide
         </h1>
         <div class="page-intro single-col-max mx-auto"></div>
         <div class="main-search-box pt-3 d-block mx-auto">
